hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_generic_mismatch1.php
<?hh // strict

function f<T>(T $value): vec<T> {
  return vec<T>[$value, $value, null];
}
